--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task11/Flowchart - Task11.xaml
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task11/Flowchart - Task11.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Flowchart___Task11" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="664,679" sap2010:WorkflowViewState.IdRef="Flowchart___Task11_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Flowchart___Task11" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1207,679" sap2010:WorkflowViewState.IdRef="Flowchart___Task11_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -66,6 +66,10 @@
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
+      <AssemblyReference>System.Private.ServiceModel</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization.Formatters</AssemblyReference>
+      <AssemblyReference>System.Private.DataContractSerialization</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="Flowchart___Task11" sap:VirtualizedContainerService.HintSize="1217,614" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -89,62 +93,64 @@
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <av:Point x:Key="ShapeLocation">702,125</av:Point>
           <av:Size x:Key="ShapeSize">200,52</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">702,151 672,151 672,197 784.5,197 784.5,227</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">702,151 672,151 672,239 784.5,239 784.5,269</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot;Choose Fruits Name&quot;+vbNewLine+&quot;Apple&quot;+vbNewLine+&quot;Banana&quot;+VbNewLine+&quot;Mango&quot;]" Title="Fruits Name">
+      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" sap2010:Annotation.AnnotationText="Asking User to provide the name of Fruit" DisplayName="Input Fruits Name" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot;Choose Fruits Name&quot;+vbNewLine+&quot;Apple&quot;+vbNewLine+&quot;Banana&quot;+VbNewLine+&quot;Mango&quot;]" Title="Fruits Name">
         <ui:InputDialog.Result>
           <OutArgument x:TypeArguments="x:String">[FruitsName]</OutArgument>
         </ui:InputDialog.Result>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+            <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:InputDialog>
       <FlowStep.Next>
-        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" DisplayName="Flow Switch" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_1">
+        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Using Switch, activity we are assigning the cases " DisplayName="Flow Switch" Expression="[FruitsName]" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_1">
           <FlowSwitch.Default>
             <FlowStep x:Name="__ReferenceID1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <av:Point x:Key="ShapeLocation">1003,364</av:Point>
-                  <av:Size x:Key="ShapeSize">200,52</av:Size>
+                  <av:Point x:Key="ShapeLocation">1003,406</av:Point>
+                  <av:Size x:Key="ShapeSize">200,124</av:Size>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Fruits Name Choosen&quot;]">
+              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Default Fruit Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Fruits Name Choosen&quot;]">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
               </ui:MessageBox>
             </FlowStep>
           </FlowSwitch.Default>
-          <FlowSwitch.Expression>
-            <VisualBasicValue x:TypeArguments="x:String" ExpressionText="FruitsName" />
-          </FlowSwitch.Expression>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">767,227</av:Point>
+              <av:Point x:Key="ShapeLocation">767,269</av:Point>
               <av:Size x:Key="ShapeSize">70,87</av:Size>
-              <av:PointCollection x:Key="Default">802,314 802,344 1103,344 1103,364</av:PointCollection>
-              <av:PointCollection x:Key="AppleConnector">837,270.5 867,270.5 867,210.5 87,210.5 87,391 100,391</av:PointCollection>
-              <av:PointCollection x:Key="BananaConnector">837,248.75 867,248.75 867,197 387,197 387,391 401,391</av:PointCollection>
-              <av:PointCollection x:Key="MangoConnector">837,292.25 867,292.25 867,344 687,344 687,390 702,390</av:PointCollection>
+              <av:PointCollection x:Key="Default">802,356 802,386 1103,386 1103,406</av:PointCollection>
+              <av:PointCollection x:Key="AppleConnector">837,312.5 867,312.5 867,252.5 387,252.5 387,469 401,469</av:PointCollection>
+              <av:PointCollection x:Key="BananaConnector">837,290.75 867,290.75 867,239 687,239 687,468 702,468</av:PointCollection>
+              <av:PointCollection x:Key="MangoConnector">837,334.25 867,334.25 867,386 87,386 87,469 100,469</av:PointCollection>
+              <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
+              <av:PointCollection x:Key="Case1Connector">767,334.25 767,334.25</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <FlowStep x:Key="Mango" x:Name="__ReferenceID4">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">702,364</av:Point>
-                <av:Size x:Key="ShapeSize">200,52</av:Size>
+                <av:Point x:Key="ShapeLocation">100,407</av:Point>
+                <av:Size x:Key="ShapeSize">200,124</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You Have choosen Mango&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Mango Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You Have choosen Mango&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
@@ -152,14 +158,15 @@
           <FlowStep x:Key="Apple" x:Name="__ReferenceID2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">100,365</av:Point>
-                <av:Size x:Key="ShapeSize">200,52</av:Size>
+                <av:Point x:Key="ShapeLocation">401,407</av:Point>
+                <av:Size x:Key="ShapeSize">200,124</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;You have Choosen Apple&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Apple Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;You have Choosen Apple&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
@@ -167,18 +174,20 @@
           <FlowStep x:Key="Banana" x:Name="__ReferenceID3">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">401,365</av:Point>
-                <av:Size x:Key="ShapeSize">200,52</av:Size>
+                <av:Point x:Key="ShapeLocation">702,406</av:Point>
+                <av:Size x:Key="ShapeSize">200,124</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You have Choosen Banana&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" sap2010:Annotation.AnnotationText="By mentioning the Fruits Names in String, we are displaying the message in message box" AutoCloseAfter="00:00:00" DisplayName="Display Banana Fruits Name" sap:VirtualizedContainerService.HintSize="200,124" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You have Choosen Banana&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
           </FlowStep>
+          <x:Reference>__ReferenceID0<x:Key>Case1</x:Key></x:Reference>
         </FlowSwitch>
       </FlowStep.Next>
     </FlowStep>
